--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "sass": "sass --watch public/assets/scss/main.scss:public/assets/css/main.css"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "bootstrap-touchspin": "^4.7.3",
     "isotope-layout": "^3.0.6",
